remove idea folder

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </tr>
 </table>
 <form name="myform" action="javascript:completeAndRedirect()">
-    <h2>Personal details</h2>
+    <h2>Details</h2>
     <select>
         <option value="--None--">--None--</option>
         <option value="Mr">Mr</option>
